added newGame() in winner.html

--- a/www/templates/winner.html
+++ b/www/templates/winner.html
@@ -18,8 +18,8 @@
     <div class="padding">
 
       <!-- TODO: Write the code so that when clicked, we play again...  -->
-      <button class="button button-block button-calm">Play Again!</button>
-    
+      <button ng-click="newGame();" class="button button-block button-calm">Play Again!</button>
+
     </div>
   </ion-content>
 </ion-modal-view>
